# cpp-katas

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  library.h
.github/workflows/: cmake.yml
include/: library.h
include/beeramid/: beeramid.h
include/create_phone_number/: create_phone_number.h
include/design_a_simple_automaton/: automaton.h
include/directions_reduction/: dir_reduction.h
include/greed_is_good/: score.h
include/help_the_bookseller/: StockList.h
include/help_your_granny/: tour.h
include/josephus_survivor/: josephus_survivor.h
include/maximum_subarray_sum/: max_sequence.h
include/scramblies/: scramble.h
include/second_variation_on_caesar_cipher/: caesar_two.h
include/simple_pig_latin/: pig_it.h
include/stop_gninnips_my_sdrow/: spin_words.h
include/weight_for_weight/: weight_sort.h
src/: CMakeLists.txt  library.cpp
src/beeramid/: beeramid.cpp
src/create_phone_number/: create_phone_number.cpp
src/design_a_simple_automaton/: automaton.cpp
src/directions_reduction/: dir_reduction.cpp
src/greed_is_good/: score.cpp
src/help_the_bookseller/: StockList.cpp
src/help_your_granny/: tour.cpp
src/josephus_survivor/: josephus_survivor.cpp
src/maximum_subarray_sum/: max_sequence.cpp
src/scramblies/: scramble.cpp
src/second_variation_on_caesar_cipher/: caesar_two.cpp
src/simple_pig_latin/: pig_it.cpp
src/stop_gninnips_my_sdrow/: spin_words.cpp
src/weight_for_weight/: weight_sort.cpp
test/: CMakeLists.txt  library_test.cpp  test_runner.cpp
test/beeramid/: beeramid_test.cpp
test/create_phone_number/: create_phone_number_test.cpp
test/design_a_simple_automaton/: automaton_test.cpp
test/directions_reduction/: dir_reduction_test.cpp
test/greed_is_good/: score_test.cpp
test/help_the_bookseller/: StockList_test.cpp
test/help_your_granny/: tour_test.cpp
test/josephus_survivor/: josephus_survivor_test.cpp
test/maximum_subarray_sum/: max_sequence_test.cpp
test/scramblies/: scramble_test.cpp
test/second_variation_on_caesar_cipher/: caesar_two_test.cpp
test/simple_pig_latin/: pig_it_test.cpp
test/stop_gninnips_my_sdrow/: spin_words_test.cpp
test/weight_for_weight/: weight_sort_test.cpp
